# roxy

./: .gitignore  README.md  package.json  pnpm-lock.yaml
old/: .gitignore  README.md  config.jsonc  package.json  pnpm-lock.yaml
old/apps/server/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.json
old/apps/server/prisma/: schema.prisma
old/apps/server/src/: index.ts  types.d.ts
old/apps/web/: .env  .eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
old/apps/web/src/: App.tsx  apiClient.ts  index.css  index.tsx  types.d.ts
old/scripts/: env.js
roxy/: .eslintrc  env.js  package.json  pnpm-lock.yaml  roxy.http  tsconfig.json
roxy-cli/: Cargo.toml  TODO.md
roxy-cli/src/: args.rs  console.rs  main.rs  ops.rs  utils.rs
roxy/prisma/: schema.prisma
roxy/src/: index.ts
roxy/src/database/: cleanup.ts  prisma.ts  types.ts
roxy/src/database/@generated/: click.ts  file.ts  index.ts  paste.ts  session.ts  uniquekey.ts  urlshortener.ts  user.ts  userlimits.ts  userusage.ts
roxy/src/plugins/: auth-plugin.ts  cache-plugin.ts  file-routes-plugin.ts  jsxte-plugin.ts  rate-limit-plugin.ts  zod-plugin.ts
roxy/src/routes/: [key].ts
roxy/src/routes/api/: _upload.ts
roxy/src/routes/app/: login.ts
roxy/src/routes/mock/: image.ts  paste.ts  video.ts
roxy/src/utils/: config.ts  file-utils.ts  get-unique-key.ts  logger.ts  parse-url.ts  readable-file-size.ts  recalculate-user-limits.ts  request-utils.ts  tracking-utils.ts  url-utils.ts
roxy/src/views/: video.ejs
roxy/src/views/assets/: highlightjs-fix.css  theme.js  (+5 more)
(+110 files in other folders)
