[package]
name = "roxy-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
colored = "2.0.0"
indicatif = "0.17.5"
open = "4.2.0"
path-clean = "1.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.164"
serde_json = "1.0.97"
